--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Welcome to Jumpstart!</h1>
-<p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+<h1>Welcome to OTLOB!</h1> <hr>
+<p class="lead">
+Use this simple ordering system to facilitate ordering from restaurants
+with your friends at university or work.<br> <br> <br>
+We wish you a good appetite &#129321; </p>
+
+
