--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,7 @@
 <footer class="footer text-muted bg-light">
   <div class="container">
-    <span>© <%= Date.today.year %> Your Company</span>
+    <span>© <%= Date.today.year %> Otlob Ordering System</span>
     <ul class="list-inline mb-0 float-right">
-      <li class="list-inline-item mr-3"><%= link_to "Terms", terms_path %></li>
-      <li class="list-inline-item mr-3"><%= link_to "Privacy", privacy_path %></li>
     </ul>
   </div>
 </footer>
