--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -17,7 +17,6 @@
 <% for friendship in current_user.friendships %>
   <div class="user float-left" style="margin: 20px;padding:15px; text-align:center;width:200px" >
     <p>
-    
         <div >
             <%= image_tag user_avatar(friendship.friend, 100), class: "rounded-circle" %>
         </div>
@@ -27,7 +26,7 @@
   </div>
 <% end %>
 
-<div style="margin-top: 120px;margin-bottom:10%;"> <br>  </div>
+<div style="margin-top: 40%;margin-bottom:10%;"> <br>  </div>
 <hr>
 
 <h2>Users Who Have Befriended You</h2>
