--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -29,9 +29,8 @@
           
             <td><%= link_to group.name, group %></td>
             <td>
-              
-                <%= link_to 'Destroy', group, method: :delete, class: "text-danger", data: { confirm: 'Are you sure?' } %>
-                
+                <%= link_to 'Edit Name', edit_group_path(group) , class: "btn btn-secondary float-left"%>
+                <%= link_to 'Destroy', group, method: :delete, class: "text-danger float-right ", data: { confirm: 'Deleted data can not be retrieved, are you sure you want to delete? ' } %>
             </td>
         <% end %>
       <% end %>
