--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,20 +1,20 @@
 <div class="page-header">
-  <%= link_to groups_path, class: 'btn btn-default' do %>
-    <span class="glyphicon glyphicon-list-alt"></span>
-    All Groups
-  <% end %>
-  <%= link_to edit_group_path(@group), class: 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-pencil"></span>
-    Edit
-  <% end %>
-  <h1>Show group</h1>
+<h1> <b> <%= @group.name%> </b> group members</h1>
+  
 </div>
 
-<dl class="dl-horizontal">
-  <dt>Name:</dt>
-  <dd><%= @group.name %></dd>
 
-  <dt>User:</dt>
-  <dd><%= @group.user %></dd>
 
-</dl>
+<div class="page-footer">
+  
+ <%= link_to groups_path, class: 'btn btn-secondary float-right' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Back To All Groups
+  <% end %>
+  
+  <%= link_to groups_path, class: 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Add New Member
+  <% end %>
+</div>
+
