--- a/app/views/notifications/_follow.html.erb
+++ b/app/views/notifications/_follow.html.erb
@@ -1,3 +1,3 @@
 <div class="media-heading">
-  <%= link_to notification.actor.email, main_app.friendships_path %> added you as a friend.
+  <b> <%= link_to  notification.actor.email , main_app.friendships_path %> </b> added you as a friend. &#129321;
 </div>
