adding the group_member module and solving notifications issues

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -27,7 +27,7 @@
       <% @groups.each do |group| %>
         <%= content_tag :tr, id: dom_id(group), class: dom_class(group) do %>
           
-            <td><%= link_to group.name, group %></td>
+            <td><%= link_to group.name, group_group_members_path(group.id) %></td>
             <td>
                 <%= link_to 'Edit Name', edit_group_path(group) , class: "btn btn-secondary float-left"%>
                 <%= link_to 'Destroy', group, method: :delete, class: "text-danger float-right", data: { confirm: 'Deleted data can not be retrieved, are you sure you want to delete? ' } %>
