--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,12 +42,18 @@
           <li class="nav-item dropdown">
             <%= link_to "#", id: "navbar-dropdown", class: "nav-link dropdown-toggle", data: { target: "nav-account-dropdown", toggle: "dropdown" }, aria: { haspopup: true, expanded: false } do %>
 
-              <%= image_tag user_avatar(current_user, 40), class: "rounded-circle" %>
+            
+            <% if current_user.avatar.attached? %>
+                <image src="<%=(main_app.url_for(current_user.avatar)) %>" , style="height:40px;width:40px;border-radius: 50%;">
+              <%else%>
+                <%= image_tag gravatar_image_url('mohammed.alnaggar93@gmail.com', size: 40 ) %>
+            <% end %>
+         
             <% end %>
 
             <div id="nav-account-dropdown" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-dropdown">
               <% if current_user.admin? %>
-                <%= link_to "Admin Area", admin_root_path, class: "dropdown-item" %>
+                <%= link_to "Admin Area", main_app.admin_root_path, class: "dropdown-item" %>
               <% end %>
               <%= link_to "Settings", main_app.edit_user_registration_path, class: "dropdown-item" %>
               <div class="dropdown-divider"></div>
