--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,5 @@
-<footer class="footer text-muted bg-light">
-  <div class="container">
-    <span>© <%= Date.today.year %> Otlob Ordering System</span>
-    <ul class="list-inline mb-0 float-right">
-    </ul>
+<footer class="footer text-muted bg-dark">
+  <div style= "text-align:center;">
+    <span >© <%= Date.today.year %> Otlob Ordering System - ITI Intake 39 - Cloud Platform Development</span>
   </div>
 </footer>
