--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-6">
-    <h1>Your Friends</h1>
+    <h1>Friends</h1>
   </div>
 <hr>
   <div class="col-sm-6 text-right">
@@ -14,7 +14,13 @@
   <div class="user float-left" style="margin: 20px;padding:15px; text-align:center;width:200px" >
     <p>
         <div >
-            <%= image_tag user_avatar(friendship.friend, 100), class: "rounded-circle" %>
+
+            <% if friendship.friend.avatar.attached? %>
+                <%= image_tag friendship.friend.avatar.variant(resize: "#{100}x#{100}!"), class: "rounded-circle" %>
+            <% else %>
+                  <%= image_tag("avatar1.png", :alt => "Avatar Image", :style => "height:100px;width:100px;") %>
+            <%end%>
+
         </div>
       <strong><%=h friendship.friend.first_name %> <%=h friendship.friend.last_name %> </strong> <br>
       <%= link_to "Unfriend", friendship, :method => :delete %>
