--- a/app/views/group_members/new.html.erb
+++ b/app/views/group_members/new.html.erb
@@ -6,7 +6,11 @@
   <div class="user float-left" style="margin: 20px;padding:15px; text-align:center;width:200px" >
     <p>
         <div >
-            <%= image_tag user_avatar(user, 100), class: "rounded-circle" %>
+            <% if user.avatar.attached? %>
+                <%= image_tag user.avatar.variant(resize: "#{100}x#{100}!"), class: "rounded-circle" %>
+            <% else %>
+                  <%= image_tag("avatar1.png", :alt => "Avatar Image", :style => "height:100px;width:100px;") %>
+            <%end%>
         </div>
       <b><%=h user.first_name %> <%=h user.last_name %> </b> <br>
       <%= link_to "Add to group", group_group_members_path(params[:group_id],:user_id => user), :method => :post %>
