--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="form-group">
     <%= form.label :order_for %>
-    <%= form.text_field :order_for, class: 'form-control' %>
+    <%= form.select(:order_for, [ 'Breakfast', 'Launch', 'Dinner' ], {}, { :class => 'select form-control' }) %>
   </div>
 
  <div class="form-group">
@@ -36,7 +36,7 @@
   <% end %>
   </div>
 
-    <%= form.text_field :status, class: 'form-control', type: 'hidden'  %>
+    <%= form.text_field :status, class: 'form-control', type: 'hidden' , value: 'waiting' %>
     <%= form.text_field :user_id, class: 'form-control', value: current_user.try(:id), type: 'hidden' %>
 
 
