--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -16,10 +16,8 @@
       <tr>
             <th>Restaurant</th>
             <th>Order for</th>
-            <th>Status</th>
-            <th colspan="3"></th>
-        
-        
+            <th>Order Status</th>
+            <th >Actions</th>
       </tr>
     </thead>
 
@@ -28,20 +26,17 @@
         <%= content_tag :tr, id: dom_id(order), class: dom_class(order) do %>
           
 
-                      <td><%= order.restaurant %></td>
-                      <td><%= order.order_for %></td>
-                      <td><%= order.status %></td>
-                      
-                      
-                      <td><%= link_to 'Edit', edit_order_path(order) %></td>
-       
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          
-            <td><%= link_to 'Show', order %></td>
-          
-           <% if order.status != "finished" %>
-           <td><%= link_to 'Finish',finish_order_path(order.id), data: { confirm: 'Are you sure you want to finish this order?' } %></td>
-           <%  end %>
+          <td><%= order.restaurant %></td>
+          <td><%= order.order_for %></td>
+          <td><%= order.status %></td>
+          <td>
+            <%= link_to 'Edit', edit_order_path(order),class: 'btn btn-secondary' %>
+            <%= link_to 'Show', order, class: 'btn btn-secondary' %>
+            <%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure you want to cancel this order?' } ,class: 'btn btn text-danger' %>
+            <% if order.status != "finished" %>
+             <%= link_to 'Finish',finish_order_path(order.id), data: { confirm: 'Are you sure you want to finish this order?'},class: 'btn btn-primary float-right' %>
+            <%  end %>
+          </td>
 
         <% end %>
       <% end %>
