--- a/app/views/group_members/index.html.erb
+++ b/app/views/group_members/index.html.erb
@@ -4,12 +4,12 @@
 
 <div class="page-footer">
   
- <%= link_to groups_path, class: 'btn btn-secondary float-right' do %>
+ <%= link_to groups_path, class: 'btn btn-secondary ' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back To All Groups
   <% end %>
   
-  <%= link_to new_group_group_member_path, class: 'btn btn-primary' do %>
+  <%= link_to new_group_group_member_path, class: 'btn btn-primary float-right' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Add New Member
   <% end %>
