--- a/app/views/group_members/new.html.erb
+++ b/app/views/group_members/new.html.erb
@@ -17,7 +17,7 @@
   </div>
 <% end %>
 
-<div style="margin-top: 15%;margin-bottom:10%;"> <br>  </div>
+<div style="clear:both;"></div>
 <hr>
 
 <div class="col-sm-6 text-right">
