--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,7 +8,7 @@
 
   <div class="col-sm-6 text-right">
   <%= link_to new_group_path, class: 'btn btn-primary' do %>
-    Add New Group
+    Create New Group
   <% end %>
   </div>
 </div>
