--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -22,21 +22,17 @@
   </div>
 
  <div class="form-group">
-    
-    <%= form.label :menu %>
-    <%= form.file_field :menu%>
+    <%= form.label :menu %> <br>
+    <%= form.file_field :menu %>
   </div>
 
   <div class="form-group" >
   <% if @order.menu.attached? %>
       <image src="<%=(url_for(@order.menu)) %>" , style="width:500px">
-    <%else%>
-       <%= image_tag "avatar.png", :alt => "Avatar Image", :style => "height:40px;width:40px;" %>
-
   <% end %>
   </div>
 
-    <%= form.text_field :status, class: 'form-control', type: 'hidden' , value: 'waiting' %>
+    <%= form.text_field :status, class: 'form-control', type: 'hidden' , value: 'Waiting' %>
     <%= form.text_field :user_id, class: 'form-control', value: current_user.try(:id), type: 'hidden' %>
 
 
