--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,7 +5,7 @@
 
   <div class="col-sm-6 text-right">
   <%= link_to new_order_path, class: 'btn btn-primary' do %>
-    Add New Order
+    Create New Order
   <% end %>
   </div>
 </div>
@@ -30,11 +30,12 @@
           <td><%= order.order_for %></td>
           <td><%= order.status %></td>
           <td>
-            <%= link_to 'Edit', edit_order_path(order),class: 'btn btn-secondary' %>
             <%= link_to 'Show', order, class: 'btn btn-secondary' %>
-            <%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure you want to cancel this order?' } ,class: 'btn btn text-danger' %>
-            <% if order.status != "finished" %>
-             <%= link_to 'Finish',finish_order_path(order.id), data: { confirm: 'Are you sure you want to finish this order?'},class: 'btn btn-primary float-right' %>
+            <%= link_to 'Cancel', order, method: :delete, data: { confirm: 'Are you sure you want to cancel this order?' } ,class: 'btn btn text-danger' %>
+            <% if order.status != "Finished" %>
+              <%= link_to 'Edit', edit_order_path(order),class: 'btn btn-secondary ' %>
+              <%= link_to 'Manage invited members', order_order_users_path(order.id),class: 'btn btn-primary ' %>
+              <%= link_to 'Finish',finish_order_path(order.id), data: { confirm: 'Are you sure you want to finish this order?'},class: 'btn btn-primary float-right' %>
             <%  end %>
           </td>
 
@@ -42,4 +43,42 @@
       <% end %>
     </tbody>
   </table>
+
+<h1>Orders You are part of</h1>
+
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover">
+    <thead>
+      <tr>
+        <th>Order Owner</th>
+        <th>Restaurant</th>
+        <th>Order Status</th>
+        <th>Members Status</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% @involvedOrders.each do |order| %>
+        <tr>
+          <td><%= order.order.user.email %></td>
+          <td><%= order.order.restaurant %></td>
+          <td><%= order.order.status %></td>
+          <td><%= order.status %></td>
+          <td>
+            <% if order.status != "joined" && order.order.status != "Finished" %>
+              <%= link_to 'Join',join_order_path(current_user.try(:id),order.order.id) %>
+            <% end %>
+            <% if order.status == "joined" %>
+              <%= link_to 'Order details',order_order_user_order_details_path(order.order.id,order.id) %>
+          </td>
+            <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+<br>
+
+
 </div>
