--- a/app/views/order_details/index.html.erb
+++ b/app/views/order_details/index.html.erb
@@ -14,6 +14,16 @@
 
 </div>
 
+<div style='margin-bottom :2%'>
+  <% if @order.status == 'Waiting'%>
+      <%= link_to  " #{@invited_users} friends are invited" , order_order_users_path(@order.id), class: 'btn btn-secondary'  %>
+  <%end%>
+
+</div>
+
+<div style="clear:both;"></div>
+
+
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
@@ -39,6 +49,7 @@
           <td><%= order_detail.amount %></td>
           <td><%= order_detail.price %></td>
           <td><%= order_detail.comment %></td>
+
           <td> 
            <% if order_detail.order_user.user.id == current_user.try(:id) %>
             <% if @order.status == 'Waiting'%>
@@ -47,6 +58,7 @@
             <% end %>
           <% end %>
          </td>
+         
               
         <% end %>
       <% end %>
