--- a/app/views/order_users/new.html.erb
+++ b/app/views/order_users/new.html.erb
@@ -1,4 +1,4 @@
-<h1> Invie Friends </h1>
+<h1> Invite Friends </h1>
 <% for user in @users %>
   <div class="user " style="margin: 2%x;padding:2%; text-align:center;width:200px ;float: left" >
     <p>
@@ -23,7 +23,7 @@
 <hr>
 
 
-<h1> Invie Groups </h1>
+<h1> Invite Groups </h1>
 
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
