--- a/app/views/order_users/index.html.erb
+++ b/app/views/order_users/index.html.erb
@@ -1,14 +1,18 @@
 
 <div class="row">
-  <div class="col-sm-6">
-    <h1> <b> <%= @order.restaurant%> </b> order members</h1>
-  </div>
+    <div class="col-sm-6">
+      <h1> <b> <%= @order.restaurant%> </b> order members</h1>
+    </div>
 
-  <div class="col-sm-6 text-right">
-  <%= link_to new_order_order_user_path, class: 'btn btn-primary' do %>
-    Invite new member/s
-  <% end %>
-  </div>
+    <div class="col-sm-6 text-right">
+   
+   <% if @order.user.id ==  current_user.try(:id) %>
+
+        <%= link_to new_order_order_user_path, class: 'btn btn-primary' do %>
+          Invite new member/s
+        <% end %>
+    <% end %>
+    </div>
 </div>
 
 
@@ -31,9 +35,9 @@
                       <td><%= order_user.user.email %></td>
                       <td><%= order_user.status %></td>
 
-            <% if order_user.user.id != current_user.id %>
+            <% if order_user.user.id != order_user.order.user.id and current_user.try(:id) == order_user.order.user.id %>
               <td><%= link_to 'Remove invitation', order_order_user_path(order_user.order.id,order_user.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            <% else%>
+            <% else %>
               <td> </td>
             <% end %>
         <% end %>
@@ -42,6 +46,8 @@
   </table>
 
 
-<%= link_to 'Back', orders_path , class:"btn btn-secondary"%>
+<%= link_to 'Back to all orders', orders_path , class:"btn btn-secondary"%>
 
 </div>
+
+<hr>
