--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -22,6 +22,7 @@
 
 </dl>
 
+<% if @order.status != 'Finished'%>
  <%= link_to edit_order_path(@order), class: 'btn btn-primary float-right' do %>
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
