--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,31 @@
-<h1>Welcome to OTLOB!</h1> <hr>
-<p class="lead">
-Use this simple ordering system to facilitate ordering from restaurants
-with your friends at university or work.<br> <br> <br>
-We wish you a good appetite &#129321; </p>
+<% if current_user %>
+    <h4>Welcome <%= current_user.name %></h4> <hr>
+    <div class="row">
+        <div class="col-sm-6">
+          <h1>Latest Orders</h1>
+        </div>
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered table-hover">
+              <tbody>
+                <% @latestOrders.each do |order| %>
+                  <%= content_tag :tr, id: dom_id(order), class: dom_class(order) do %>
+                    <% if order.status != "Finished" %>
+                        <td><%= link_to "#{order.order_for}"+" from "+"#{order.restaurant}"+" on "+"#{order.created_at.to_date}" ,order_order_user_order_details_path(order.id,order.id) %></td>
+                    <% else %>
+                        <td><%="#{order.order_for}"+" from "+"#{order.restaurant}"+" on "+"#{order.created_at.to_date}" %></td>
+                    <% end %>
+                  <% end %>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+    
+    </div>
+      
+      
+
+<% else %>
+<%= render 'newindex' %>
+<% end %>
 
 
