--- a/app/views/notifications/_follow.html.erb
+++ b/app/views/notifications/_follow.html.erb
@@ -1,5 +1,5 @@
 <div class="media-heading">
   <br>
-  <b> <%= link_to  notification.actor.email , main_app.friendships_path %> </b> added you as a friend. &#129321;
+  <b> <%= link_to  notification.actor.first_name , main_app.friendships_path %> </b> added you as a friend. &#129321;
   <hr>
 </div>
