--- a/app/views/notifications/_invitation.html.erb
+++ b/app/views/notifications/_invitation.html.erb
@@ -1,6 +1,7 @@
 <div class="media-heading">
   <br>
-    <%= link_to notification.actor.first_name , main_app.friendships_path %> has invited you to a new order 
+    <%= link_to notification.actor.first_name , main_app.friendships_path %> has invited you
+     to a  <%= notification.second_target.order_for %> from <%= notification.second_target.restaurant %> 
     <%= link_to "Join" ,main_app.orders_path , class:"btn btn-primary btn-sm float-right"%> 
   <hr>
 </div>
