--- a/app/views/notifications/_unfriend.html.erb
+++ b/app/views/notifications/_unfriend.html.erb
@@ -1,5 +1,5 @@
 <div class="media-heading">
   <br>
-  <b> <%= link_to  notification.actor.email , main_app.friendships_path %> </b> removed you from his friends. &#128543;
+  <b> <%= link_to  notification.actor.first_name , main_app.friendships_path %> </b> removed you from his friends. &#128543;
   <hr>
 </div>
