Updating show order

--- a/app/views/order_details/index.html.erb
+++ b/app/views/order_details/index.html.erb
@@ -13,58 +13,5 @@
   <%end%>
 
 </div>
-
-<div style='margin-bottom :2%'>
-  <% if @order.status == 'Waiting' %>
-      <%= link_to  " #{@invited_users} friends are invited" , order_order_users_path(@order.id), class: 'btn btn-secondary'  %>
-  <%end%>
-
-</div>
-
-<div style="clear:both;"></div>
-
-
-<div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
-    <thead>
-      <tr>
-    
-            <th>Person</th>
-            <th>Item</th>
-            <th>Amount</th>
-            <th>Price</th>
-            <th>Comment</th>
-            <th>Action</th>
-        
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @order_details.each do |order_detail| %>
-        <%= content_tag :tr, id: dom_id(order_detail), class: dom_class(order_detail) do %>
-          
-          
-          <td><%= order_detail.order_user.user.email %></td> 
-          <td><%= order_detail.item %></td>
-          <td><%= order_detail.amount %></td>
-          <td><%= order_detail.price %></td>
-          <td><%= order_detail.comment %></td>
-
-          <td> 
-           <% if order_detail.order_user.user.id == current_user.try(:id) %>
-            <% if @order.status == 'Waiting'%>
-              <%= link_to 'Edit', edit_order_order_user_order_detail_path(params[:order_id],params[:order_user_id],order_detail.id) , class:"btn btn-secondary"%>
-              <%= link_to 'Cancel', order_order_user_order_detail_path(params[:order_id],params[:order_user_id],order_detail.id), method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn text-danger' %>
-            <% end %>
-          <% end %>
-         </td>
-         
-              
-        <% end %>
-      <% end %>
-    </tbody>
-  </table>
-
-    <%= link_to 'Back', orders_path , class:"btn btn-secondary " %>
-
-</div>
+<%= render 'order_details', order_details: @order_details ,order: @order ,invited_users: @invited_users  %>
+<%= link_to 'Back', orders_path , class:"btn btn-secondary " %>
