--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,6 +1,5 @@
 <div class="page-header">
   <h1>Show order</h1>
-
 </div>
 
 <dl class="dl-horizontal">
@@ -15,23 +14,27 @@
 
   <dt>Menu:</dt>
   <% if @order.menu.attached? %>
-  <image src="<%=(url_for(@order.menu))%>" ,
+   <image src="<%=(url_for(@order.menu))%>" ,
     style="width:50%; margin-bottom:50px; margin-top:10px;   position: relative;">
-    <%else%>
+  <%else%>
     <dd> There is no menu attached on this order. </dd>
-    <% end %>
+  <% end %>
 
 </dl>
 
+<div>
 <% if @order.status != 'Finished'%>
-<%= link_to edit_order_path(@order), class: 'btn btn-primary float-right' do %>
-<span class="glyphicon glyphicon-pencil"></span>
-Edit
+  <%= link_to edit_order_path(@order), class: 'btn btn-primary float-right' do %>
+  <span class="glyphicon glyphicon-pencil"></span>
+  Edit
+  <% end %>
 <% end %>
+</div>
+
+<%= render :partial => 'order_details/order_details', order_details: @order_details ,order: @order ,invited_users: @invited_users  %>
 
 <%= link_to orders_path, class: 'btn btn-secondary ' do %>
 <span class="glyphicon glyphicon-list-alt"></span>
 Back to All Orders
 <% end %>
 <hr>
-<% end %>
