--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,12 @@
 <% if current_user %>
-    <h4>Welcome <%= current_user.name %></h4> <hr>
+    <h4>Welcome <b> <%= current_user.name %> </b> </h4> <hr>
     <div class="row">
         <div class="col-sm-6">
-          <h1>Your Activities</h1>
+          <h2>Your Activities</h2>
         </div>
-        <div class="table-responsive">
+    </div>
+
+    <div class="table-responsive">
             <table class="table table-striped table-bordered table-hover">
               <tbody>
                 <% @latestActivity.each do |userActivity| %>
@@ -18,13 +20,17 @@
                 <% end %>
               </tbody>
             </table>
-        </div>
     </div>
+
+
+
     <div class="row">
         <div class="col-sm-6">
-          <h1>Friends Activities</h1>
+          <h2>Friends Activities</h2>
         </div>
-        <div class="table-responsive">
+    </div>
+
+    <div class="table-responsive">
             <table class="table table-striped table-bordered table-hover">
               <tbody>
                 <% @friendsActivity.each do |activity| %>
@@ -34,7 +40,6 @@
                 <% end %>
               </tbody>
             </table>
-        </div>
     </div>
       
       
