--- a/app/views/notifications/_notifyOrderUsers.html.erb
+++ b/app/views/notifications/_notifyOrderUsers.html.erb
@@ -1,7 +1,6 @@
 <div class="media-heading">
   <br>
-    <%= link_to notification.actor.first_name , main_app.friendships_path %> has invited <%= notification.target.name %>
-     to a  <%= notification.second_target.order_for %> from <%= notification.second_target.restaurant %>  
+  <%= notification.msg %> 
   <hr>
 </div>
 
